--- a/styles.css
+++ b/styles.css
@@ -133,7 +133,7 @@ h3 {
     flex-direction: column;
     justify-content: center;
     height: 320px;
-    padding-top: 40px;
+    padding-top: 0;
 }
 
 #clock:hover {
@@ -141,12 +141,12 @@ h3 {
 }
 
 #time {
-    font-size: 4rem;
+    font-size: 8rem;
     font-weight: 600;
-    color: var(--primary-color);
-    margin-bottom: 0.5rem;
-    letter-spacing: 1px;
-    font-family: 'Noto Sans KR', sans-serif;
+    color: #555;
+    margin-bottom: 2rem;
+    letter-spacing: 0;
+    font-family: 'digital-7', monospace;
     width: 100%;
     display: block;
     text-align: center;
@@ -158,6 +158,13 @@ h3 {
     font-weight: 400;
     color: #777;
     font-family: 'Noto Sans KR', sans-serif;
+}
+
+@font-face {
+    font-family: 'digital-7';
+    src: url('https://cdn.jsdelivr.net/gh/tholman/font-demos@master/fonts/digital-7/Digital-7.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 }
 
 /* 세계 시계 */
