--- a/styles.css
+++ b/styles.css
@@ -596,4 +596,13 @@ footer {
     bottom: 50px;
     left: 2.5rem;
     right: 2.5rem;
+}
+
+.ampm {
+    font-size: 2.5rem;
+    font-weight: 400;
+    vertical-align: middle;
+    font-family: 'Noto Sans KR', sans-serif;
+    margin-right: 0.5rem;
+    color: #777;
 } 
