--- a/styles.css
+++ b/styles.css
@@ -601,8 +601,11 @@ footer {
 .ampm {
     font-size: 2.5rem;
     font-weight: 400;
-    vertical-align: middle;
     font-family: 'Noto Sans KR', sans-serif;
-    margin-right: 0.5rem;
     color: #777;
+    display: block;
+    text-align: center;
+    margin-bottom: -1rem;
+    position: relative;
+    top: 0;
 } 
