--- a/styles.css
+++ b/styles.css
@@ -599,13 +599,11 @@ footer {
 }
 
 .ampm {
-    font-size: 2.5rem;
+    font-size: 3rem;
     font-weight: 400;
     font-family: 'Noto Sans KR', sans-serif;
     color: #777;
-    display: block;
-    text-align: center;
-    margin-bottom: -1rem;
-    position: relative;
-    top: 0;
+    display: inline;
+    vertical-align: middle;
+    margin-right: 10px;
 } 
